# MingServer

./: .gitignore  CMakeLists.txt  ESDriver.jce  MingHello.jce  MingHello_imp.go  MingServer.conf  README.md  go.mod  go.sum  j.json  main.go  rebuild.sh  rebuild_and_upload.sh  start.sh
aidoc/: AGENTS.md
boot/: boot.go
client/: CMakeLists.txt  client.go
cmake/: taf-tools.cmake
common/: common.go
config/: config.conf
debugtool/: dumpstack.go
logic/: logic.go  logic_test.go
logic/esrpc/: esrpc.go  esrpc_test.go
logic/http_proxy/: http.go  http_test.go
repositories/caches/ming_cache/: caches.go  caches_test.go
repositories/dcache_repository/: caches.go  caches_test.go
repositories/es/es_repository/: es_data.go  esdata.go  esdata_test.go
repositories/es_repository/: esdata_test.go
repositories/models/: request.go  response.go  teacher.go
repositories/mysql/teacher_repository/: teacher.go  teacher_test.go
repositories/teacher_repository/: teacher.go  teacher_test.go
taf-protocol/Comm/: Position.jce.go  Position.taf.go
taf-protocol/FCS/: ESDriver.jce.go  ESDriver.taf.go
taf-protocol/MingApp/: MingHello.jce.go  MingHello.taf.go
utils/: utils.go
utils/cache/: cache.go
utils/conf/: conf.go
utils/confs/: confs.go
utils/esdb/: esdb.go
utils/log/: log.go
utils/ormdb/: ormdb.go
utils/taftool/: taftools.go
utils/trpc/: dcrpc.go  esrpc.go  mcrpc.go
